samples/_failures_safe/1761688850_1f11e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa203270.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_fa203270.c:138:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  138 |     int num
      |     ^~~
./samples/SAFE/__tmp_fa203270.c:138:5: error: expected declaration or statement at end of input
